# catalog

./: .example.env  README.md  dev.kdl  justfile
backend/: .dockerignore  2  Cargo.toml  prod.Containerfile
backend/src/: cors.rs  env.rs  error.rs  extractors.rs  main.rs  shutdown.rs  utils.rs
backend/src/contracts/: mod.rs  product_dto.rs  user_dto.rs
backend/src/routers/: images.rs  mod.rs  products.rs  users.rs
backend/src/sql/: create-tables.sql
frontend/: cypress.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/.devcontainer/: ContainerFile  devcontainer.json
frontend/cypress/e2e/: spec.cy.ts
frontend/src/: App.vue  api.ts  env.d.ts  main.ts  router.ts  style.css
frontend/src/api/: index.ts  schemas.ts
frontend/src/components/: AlertBox.vue  BaseModal.vue  Bottom-nav.vue  DropZone.vue  Image.cy.ts  Image.vue  Navbar.vue  NotificationTrail.vue  NotificationsModal.vue  Product.vue  ProductImagesEditor.vue  ProductSearchResult.vue  Search.vue  SearchModal.vue
frontend/src/stores/: useAlertStore.ts  useAuthStore.ts  useBackendStore.ts  useImageStore.ts  useNotificationsStore.ts  useProductStore.ts
frontend/src/utils/: highlight.ts
frontend/src/views/: Catalog.vue  CreateProduct.vue  Login.vue  ProductView.vue
